--- a/src/components/SubHeroComponent/SubHeroComponent.css
+++ b/src/components/SubHeroComponent/SubHeroComponent.css
@@ -31,32 +31,16 @@
     width: 100%;
     height: 100%;
   }
-  
 
-  .title-sub-hero{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-  }
 
-.title-sub-hero h2{
-  font-weight: 700;
-  font-size: 46px;
-  line-height: 38.4px;
-  letter-spacing: 0;
-  color: var(--gold26);
-}
-
-  .title-sub-hero p{
-    padding-bottom: 64px;
-    padding-left: 16.84%;
-    padding-right: 16.84%;
-    text-align: center;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 38.4px;
-    letter-spacing: 0;
-    color: var(--grey03);
+  @media(max-width: 992px){
+    .sub-hero .AA-title{
+      gap: 16px;
+    }
+    
+    .sub-hero .AA-title-desc{
+      padding-bottom: 32px;
+      padding-right: 0;
+      padding-left: 0;
+    }
   }
