--- a/src/components/ProductCategoryComponent/ProductCategoryComponent.css
+++ b/src/components/ProductCategoryComponent/ProductCategoryComponent.css
@@ -20,6 +20,7 @@
 }
 
 .product-category-card{
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
