change (logo + company) + mate benifit + quality section

--- a/src/components/Map3D/Map3D.css
+++ b/src/components/Map3D/Map3D.css
@@ -1,11 +1,16 @@
+.map-section{
+	padding-top: 64px;
+}
+
 .map-container{
-    display: flex;
-    gap: 10px;
+	display: flex;
+    /* gap: 10px; */
     flex-wrap: wrap;
 }
 
-.map-container svg{
-    width: 50%;
+.map-container #Syria_1_{
+    width: 40%;
+	height: 50%;
 }
 
 
