--- a/src/components/NavBarComponent/NavBarComponent.css
+++ b/src/components/NavBarComponent/NavBarComponent.css
@@ -15,6 +15,20 @@ nav.scrolled {
     border-bottom: 2px solid var(--gold26)
 }
 
+.navbar .brand{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.navbar .brand span{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 0;
+    color: var(--white-color);
+}
+
 .nav-menu{
     display: flex;
     justify-content: space-between;
@@ -66,6 +80,10 @@ nav.scrolled {
 }
 
 @media(max-width: 992px){
+    .navbar .brand span{
+        line-height: 24px;
+    }
+
    .toggle-btn {
         display: block;
     }  
@@ -73,11 +91,6 @@ nav.scrolled {
     .nav-menu,
     .nav-icons{
         display: none;
-    }
-
-    .navbar .logo{
-        width: 160px;
-        height: 53px;
     }
 
     .nav-menu{
