--- a/src/components/QualityComponent/QualityComponent.css
+++ b/src/components/QualityComponent/QualityComponent.css
@@ -23,7 +23,7 @@
 }
 
 .quality-sec .card-quality-sec .left-side .factory-image {
-    height: 100%;
+    height: 358px;
     max-width: 770px;
     border-radius: 28px;
     transition: transform 0.3s ease;
