--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100..900&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
 }
 
 :root {
@@ -24,8 +24,8 @@
   --grey44: #464644;
   --grey88 : #727088
 }
-/* 
-.white-mode{
+
+/* .white-mode{
   --gold26: #AD1A18;
   --gold10: #AD1A181A;
 
