--- a/src/components/CenterCardComponent/CenterCardComponent.css
+++ b/src/components/CenterCardComponent/CenterCardComponent.css
@@ -38,6 +38,12 @@
     letter-spacing: 0;
 }
 
+.center-info-row svg{
+    color: var(--gold26);
+    width: 18px;
+    height: 26px;
+}
+
 @media(max-width: 992px){
     .center-card{
         width: 100%;
@@ -55,5 +61,9 @@
     .center-card span{
         font-size: 16px;
         line-height: 24px;
-    }         
+    }     
+    .center-info-row svg{
+        width: 18px;
+        height: 26px;
+    }    
 }
