--- a/src/components/LanguageDropdown/LanguageDropdown.css
+++ b/src/components/LanguageDropdown/LanguageDropdown.css
@@ -4,6 +4,16 @@
   display: inline-block;
 }
 
+.language-dropdown .language-span{
+  color: var(--grey-black);
+}
+
+.language-dropdown .lang-icon{
+  width: 30px;
+  height: 27px;
+  color: var(--grey-black);
+}
+
 .language-dropdown button {
   background-color: transparent;
   border: none;
