--- a/src/components/NavBarComponent/NavBarComponent.css
+++ b/src/components/NavBarComponent/NavBarComponent.css
@@ -9,6 +9,7 @@
     width: 100%;
     z-index: 1000000;
     height: 68px;
+    box-shadow: 0px 4px 8px 0px #1b1b1b7a;
 }
 
 nav.scrolled {
@@ -79,6 +80,12 @@ nav.scrolled {
     display: none;
 }
 
+.mode-icon{
+  width: 30px;
+  height: 27px;
+  color: var(--grey-black);
+}
+
 @media(max-width: 992px){
     .navbar .brand span{
         line-height: 24px;
@@ -118,6 +125,7 @@ nav.scrolled {
         max-height: 100vh;
         opacity: 1;
         visibility: visible;
+        box-shadow: 0px 4px 8px 0px #1b1b1b7a;
     }
 
     .mobileLanguageWrapper {
@@ -127,4 +135,42 @@ nav.scrolled {
     .mobileLanguageWrapper .language-dropdown{
         display: block;
     }
+
+    .theme-toggle {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+    }
+
+    .theme-toggle span {
+        color: var(--grey-black);
+    }
+
+    .theme-toggle .btns {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 6px;
+        border: none;
+        border-radius: 16px;
+        background-color: var(--black15);
+        border: 1px solid var(--gold26);
+        padding: 6px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .theme-toggle .btns svg {
+        width: 22px;
+        height: 22px;
+    }
+
+    .theme-toggle .btns svg.active{
+        background-color: var(--gold26);
+        border-radius: 50%;
+        padding: 2px;
+        color: var(--black-color);
+    }
+
 }
