--- a/src/components/SubHeroComponent/SubHeroComponent.css
+++ b/src/components/SubHeroComponent/SubHeroComponent.css
@@ -9,12 +9,15 @@
 }
 
 .sub-hero .AA-title{
-     margin-bottom: 64px;
+    padding-top: 32px;
+    margin-bottom: 64px;
 }
+
+
 
 .sub-hero .slick-slide{
     position: relative;
-    padding-bottom: 32px;
+    box-shadow: 0px 4px 8px 0px #1b1b1b7a;
 }
 
 .slider-content {
@@ -45,7 +48,8 @@
     }
     
     .sub-hero .AA-title-desc{
-      padding-bottom: 32px;
+      font-size: 14px;
+      line-height: 24px;
       padding-right: 0;
       padding-left: 0;
     }
