--- a/src/index.css
+++ b/src/index.css
@@ -22,22 +22,25 @@
   --greyb4: #A6A5B4;
   --grey03: #F1F1F3;
   --grey44: #464644;
-  --grey88 : #727088
+  --grey88 : #727088;
+  --grey-black: #F1F1F3;
 }
 
-/* .white-mode{
+.white-mode{
+  --white-color: #1D1D1B;
+  --black-color: #fff;
   --gold26: #AD1A18;
   --gold10: #AD1A181A;
 
+  --grey01: #8B8A9D;
+  --greyb4: #1D1D1B;
   --grey03: #1D1D1B;
   --black15: #F1F1F3;
-  --black01: #DDDDE2;
+  --black01: #E8E8E8;
   --black17: #DDDDE2;
-} */
-
-#root{
-  background-color: var(--black17);
+  --grey-black: #1D1D1B;
 }
+
 
 .px-50{
   padding-left: 2.60416667%;
@@ -182,15 +185,6 @@
   letter-spacing: 0;
 }
 
-
-.box-shadow-black{
-  box-shadow: 6px 6px 0px 2px var(--black05);
-}
-
-.border-grey-2{
-  border: 2px solid var(--grey15);
-}
-
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 6px;
@@ -200,14 +194,6 @@
   background: transparent;
 }
 
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(180deg, var(--gold26), var(--gold10));
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(180deg, var(--gold10) , var(--gold26));
-}
 
 /*Start Responsive*/
 @media (max-width: 1919px) {
@@ -265,7 +251,5 @@
   .mt-18{
     margin-top: 10.2564103%;
   }  
-  .box-shadow-black{
-    box-shadow: 4px 4px 0px 1px var(--black05);
-  }
+
 }
