--- a/src/components/CenterCardComponent/CenterCardComponent.css
+++ b/src/components/CenterCardComponent/CenterCardComponent.css
@@ -4,6 +4,7 @@
     gap: 16px;
     align-items: start;
     background-color: var(--black01);
+    max-width: 265px;
 }
 
 .center-desc{
@@ -24,11 +25,6 @@
     padding: 16px;
 }
 
-.center-card .center-info-row{
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
 
 .center-card span{
     color: var(--greyb4);
@@ -36,6 +32,7 @@
     font-size: 20px;
     line-height: 30px;
     letter-spacing: 0;
+    padding-right: 8px;
 }
 
 .center-info-row svg{
