--- a/src/components/StudyCardsComponent/StudyCardsComponent.css
+++ b/src/components/StudyCardsComponent/StudyCardsComponent.css
@@ -15,8 +15,14 @@
 
 
 @media(max-width: 992px){
+    .study-section{
+        gap: 32px;
+    }
     .study-cards{
         flex-wrap: wrap;
         justify-content: center;
+        gap: 16px;
+        padding-top: 0px;
+        padding-bottom: 0px;
     }
 }
