--- a/src/components/EventCardComponent/EventCardComponent.css
+++ b/src/components/EventCardComponent/EventCardComponent.css
@@ -64,6 +64,27 @@
     letter-spacing: 0;
 }
 
+
+
+.modal-content {  
+    padding: 40px;
+}
+
+.modal-content h2{
+    font: 18px;
+    text-align: center;
+    padding-bottom: 10px;
+    color: var(--gold26);;
+}
+
+.modal-images img {
+    width: 100%;
+    height: 100%;
+    max-height: 500px;
+    display: block;
+}
+
+
 @media(max-width:992px){
     .event-card-border{
         width: 100%;
