--- a/src/components/AboutComponent/AboutComponent.css
+++ b/src/components/AboutComponent/AboutComponent.css
@@ -21,13 +21,15 @@
 
 .about-factory .card-about-factory .left-side{
     position: relative; 
+    cursor: pointer;
 }
 
 .about-factory .card-about-factory .left-side .factory-image{
     height: 100%;
     width: 600px;
     border-radius: 28px;
-    transition: transform 0.3s ease; 
+    transition: transform 0.6s ease, border 0.6s ease;
+    transform-style: preserve-3d; 
 }
 
   /* ===========================
@@ -35,10 +37,11 @@
    =========================== */
 .about-factory .card-about-factory .left-side .factory-image:hover {
     border: 1px solid var(--gold26);
-    transform: scale(1.1);
+    transform: translateZ(80px) scale(1.03);
 }
 
 .about-factory .card-about-factory .left-side .video-link{
+    cursor: pointer;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -55,7 +58,8 @@
     gap: 32px;
 }
 
-.about-factory .card-about-factory .right-side h4{
+.about-factory .card-about-factory .right-side h4,
+.about-factory .card-about-factory .right-side h5{
     font-size: 32px;
     font-weight: 600;
     line-height: 38px;
