--- a/src/components/BrandSliderComponent/BrandSliderComponent.css
+++ b/src/components/BrandSliderComponent/BrandSliderComponent.css
@@ -23,7 +23,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #000000CC;
+    background-color: var(--black16);
     z-index: 1;
     width: 100%;
     height: 100%;
