--- a/src/components/ProductCardComponent/ProductCardComponent.css
+++ b/src/components/ProductCardComponent/ProductCardComponent.css
@@ -6,6 +6,8 @@
     max-width: 316px;
     transition: all 0.3s ease;
     cursor: pointer;
+    perspective: 1000px;
+    transform-style: preserve-3d;
 }
 
  /* Increase shadow on hover effect */
@@ -30,13 +32,14 @@
 .product-card img{
     width: 100%;
     border-radius: 8px;
-    transition: transform 0.3s ease; 
-    box-shadow: 0px 4px 8px 0px #1b1b1b7a;
+    transform-style: preserve-3d;
+    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    /* box-shadow: 0px 4px 8px 0px #1b1b1b7a; */
 }
 
 /* Hover Effect on Image */
 .product-card:hover img {
-  transform: scale(1.05); /* Zoom in the image */
+  transform: translateZ(50px) scale(0.95);
 }
 
 .product-card .product-desc{
@@ -65,7 +68,8 @@
 }
 
 .product-card .btn-comp{
-    margin-top: auto
+    margin-top: auto;
+    background-color: var(--black15);
 }
 
 @media(max-width: 1919px){
